sort.pancake.BurnedPancake.scala.error
Erreur de compilation :
BurnedPancake:12: error: not enough arguments for method isPancakeUpsideDown: (x$1: Int)Boolean.
Unspecified value parameter x$1.
      if (isPancakeUpsideDown()){
                             ^BurnedPancake:13: error: not found: value i
        flip(i+1)
             ^